Update user settings and UI components
- Modified `App.config` to change user settings defaults.
- Added progress bars in `Closing`, `DownloadingDialog`, and `DownloadingVideo` forms.
- Created `DownloadQueue` form with DataGridView for downloads.
- Enhanced `Form1` with new buttons and improved layout.
- Implemented settings management methods in `Form1.cs`.
- Restructured `Settings` form for better usability.
- Added `Dialog` class for handling dialog interactions.
- Updated project file for DPI awareness and added new resources.

--- a/YT-DLP.player/App.config
+++ b/YT-DLP.player/App.config
@@ -8,7 +8,7 @@
     <userSettings>
         <YT_DLP.player.Properties.Settings>
             <setting name="DeleteOnClose" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="DownloadLocation" serializeAs="String">
                 <value />
@@ -23,19 +23,19 @@
                 <value>80</value>
             </setting>
             <setting name="DownloadVideoFormat" serializeAs="String">
-                <value>"bestvideo"</value>
+                <value>bestvideo</value>
             </setting>
             <setting name="DownloadAudioFormat" serializeAs="String">
-                <value>"bestaudio"</value>
+                <value>bestaudio</value>
             </setting>
             <setting name="PreferredLanguage" serializeAs="String">
-                <value>"en"</value>
+                <value>en</value>
             </setting>
             <setting name="NormalizeAudio" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="ResumeLastPosition" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="WarnLargeDownloads" serializeAs="String">
                 <value>True</value>
