Refactor UI and add new forms for improved experience
- Updated `App.config` to include `ApplicationLightMode`.
- Removed old form files and created new forms (`frm_Closing`, `frm_DownloadQueue`, `frm_DownloadingDialog`, `frm_DownloadingVideo`, `frm_Splash`, `frm_Settings`) with modern UI features.
- Modified `DLPButton.cs` for theme initialization.
- Updated resource files to support new forms and settings.
- Added new PNG images for UI elements and removed unused images.
- Enhanced the overall structure and maintainability of the application.

--- a/YT-DLP.player/App.config
+++ b/YT-DLP.player/App.config
@@ -46,6 +46,9 @@
             <setting name="CustomDownloadLocation" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ApplicationLightMode" serializeAs="String">
+                <value>False</value>
+            </setting>
         </YT_DLP.player.Properties.Settings>
     </userSettings>
 </configuration>
