--- a/YT-DLP.player/Properties/Settings.settings
+++ b/YT-DLP.player/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="CustomDownloadLocation" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ApplicationLightMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
