I BEG OF YOU KURWA PLEASE WORK 😭😭😭😭😭

--- a/YT-DLP.player/App.config
+++ b/YT-DLP.player/App.config
@@ -2,11 +2,164 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="YT_DLP.player.Hotkeys.HotKeys" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="YT_DLP.player.YT_DLP.hotkeys.HotKeys" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="YT_DLP.player.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
+        <YT_DLP.player.Hotkeys.HotKeys>
+            <setting name="K1" serializeAs="String">
+                <value>Skip player to 10%</value>
+            </setting>
+            <setting name="K2" serializeAs="String">
+                <value>Skip player to 20%</value>
+            </setting>
+            <setting name="K3" serializeAs="String">
+                <value>Skip player to 30%</value>
+            </setting>
+            <setting name="K4" serializeAs="String">
+                <value>Skip player to 40%</value>
+            </setting>
+            <setting name="K5" serializeAs="String">
+                <value>Skip player to 50%</value>
+            </setting>
+            <setting name="K6" serializeAs="String">
+                <value>Skip player to 60%</value>
+            </setting>
+            <setting name="K7" serializeAs="String">
+                <value>Skip player to 70%</value>
+            </setting>
+            <setting name="K8" serializeAs="String">
+                <value>Skip player to 80%</value>
+            </setting>
+            <setting name="K9" serializeAs="String">
+                <value>Skip player to 90%</value>
+            </setting>
+            <setting name="K0" serializeAs="String">
+                <value>Seek to begining</value>
+            </setting>
+            <setting name="Q" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="W" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="E" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="R" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="T" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Y" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="U" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="I" serializeAs="String">
+                <value>Open popup player</value>
+            </setting>
+            <setting name="O" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="P" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="A" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="S" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="D" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="F" serializeAs="String">
+                <value>Activate/exit fullscreen</value>
+            </setting>
+            <setting name="G" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="H" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="J" serializeAs="String">
+                <value>Seek back 10 seconds</value>
+            </setting>
+            <setting name="K" serializeAs="String">
+                <value>Play/pause player</value>
+            </setting>
+            <setting name="L" serializeAs="String">
+                <value>Seek forward 10 seconds</value>
+            </setting>
+            <setting name="Z" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="X" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="C" serializeAs="String">
+                <value>Show/hide closed captions</value>
+            </setting>
+            <setting name="V" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="B" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="N" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="M" serializeAs="String">
+                <value>Mute/unmute player</value>
+            </setting>
+            <setting name="Comma" serializeAs="String">
+                <value>Go back previous frame</value>
+            </setting>
+            <setting name="Period" serializeAs="String">
+                <value>Skip to next frame</value>
+            </setting>
+            <setting name="ForwardSlash" serializeAs="String">
+                <value>Go to URL box</value>
+            </setting>
+            <setting name="Insert" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Delete" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Home" serializeAs="String">
+                <value>Seek to begining</value>
+            </setting>
+            <setting name="End" serializeAs="String">
+                <value>Seek to end</value>
+            </setting>
+            <setting name="PageUp" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PageDown" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Space" serializeAs="String">
+                <value>Play/pause player</value>
+            </setting>
+            <setting name="ArrowLeft" serializeAs="String">
+                <value>Seek back 5 seconds</value>
+            </setting>
+            <setting name="ArrowRight" serializeAs="String">
+                <value>Seek forward 5 seconds</value>
+            </setting>
+            <setting name="ArrowUp" serializeAs="String">
+                <value>Increase volume 5%</value>
+            </setting>
+            <setting name="ArrowDown" serializeAs="String">
+                <value>Decrease volume 5%</value>
+            </setting>
+        </YT_DLP.player.Hotkeys.HotKeys>
         <YT_DLP.player.YT_DLP.hotkeys.HotKeys>
             <setting name="K1" serializeAs="String">
                 <value>Skip player to 10%</value>
